test/domains/compilerErrors/rect-mismatch-type-1.good
rect-mismatch-type-1.chpl:4: error: index type mismatch in domain assignment
